2010-10-24 Harri Pitkänen <hatapitk@iki.fi>
	* Add check for incorrect infinitive form in compound verbs.

2010-10-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add A-infinitive and E-infinitive to MalagaAnalyzer.

2010-10-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add MA-infinitive to MalagaAnalyzer.

2010-10-10 Harri Pitkänen <hatapitk@iki.fi>
	* Add configure option --disable-malaga for disabling Malaga backend.

2010-09-27 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Don't suggest using lower case when the word may be a geographical name.

2010-09-21 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Accept bracketed reference at the end of sentence.

2010-09-13 Harri Pitkänen <hatapitk@iki.fi>
	* Handle cases where an optional symbol is not found from Malaga symbol
	  table. This can happen when older v2 morphologies are used.

2010-09-12 Harri Pitkänen <hatapitk@iki.fi>
	* Support new attribute NEGATIVE in morphological analysis.
	* Warn about "en juoksen" in grammar checker.

2010-09-04 Harri Pitkänen <hatapitk@iki.fi>
	* Accept "A:n".

2010-08-22 Harri Pitkänen <hatapitk@iki.fi>
	* Accept words like "ja-sana" (Trac #13).

2010-08-21 Harri Pitkänen <hatapitk@iki.fi>
	* Separate Finnish/Malaga specific speller tweaks from common speller code.

2010-06-30 Harri Pitkänen <hatapitk@iki.fi>
	* Support using language codes other than Finnish as the real language (Trac #15).

2010-06-08 Harri Pitkänen <hatapitk@iki.fi>
	* Change HfstSpeller to return SPELL_CAP_FIRST when possible.

2010-06-01 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version numbers for 3.1.
	* Add function voikkoGetVersion() to get the library version string.
	* Add option --version to test tools.

2010-05-11 Harri Pitkänen <hatapitk@iki.fi>
	* Adjust old API so that up to four simultaneous handles can be opened.
	  This method is not thread safe but it is no worse than the old single
	  handle check. It should fix many real world problems (eg. with Evolution)
	  while we wait for applications to switch to the new API.