@@ -30,7 +30,14 @@ namespace libvoikko { namespace sentence {
  * as a single word, false if the dot does not belong to the word.
  */
 static bool dot_part_of_word(voikko_options_t * voikkoOptions, const wchar_t * text, size_t len) {
-	if (len < 2) return false;
+	if (len < 2) {
+		return false;
+	}
+	
+	// Initials: Pertti K.
+	if (len == 2 && SimpleChar::isUpper(text[0])) {
+		return true;
+	}
 	
 	// ordinal numbers and dates
 	bool onlyNumbersOrDots = true;
