@@ -3,6 +3,7 @@ Ulkona paistaa aurinko. On lämmintä.
 Kun aurinko paistaa, ei yleensä sada vettä.
 Varo vähän! Oletko hullu? Arvasin.
 Juhliin saapuu mm. Martta ja Reijo.
+Pertti K. asuu omakotitalossa.
 Perjantai 13. päivä on ensi viikolla.
 Myös 20.3. satoi lunta.
 Myös 20.3.1984 satoi lunta.
