@@ -7,6 +7,8 @@ B: Oletko hullu?
 E: Arvasin.
 P: Juhliin saapuu mm. 
 E: Martta ja Reijo.
+P: Pertti K. 
+E: asuu omakotitalossa.
 P: Perjantai 13. 
 E: päivä on ensi viikolla.
 P: Myös 20.3. 
