@@ -93,6 +93,7 @@ PÄÄTÖS	Jos virkkeessä on sarkainmerkki, voi teksti sisältää vähän mitä
 Sarkaimen	jälkeen Jotain sentään tarkistetaan.
  [code=6, level=0, descr="", stpos=18, len=6, suggs={"jotain"}]
 Venäjän keisareita olivat mm. Aleksanteri III ja Iivana VI.
+Pertti K. asuu omakotitalossa.
 Sarkain	loppuu. Alkaa uusi virke.
 Sarkain	loppuu? Alkaa uusi virke.
 Sarkain	loppuu! Alkaa uusi virke.
