@@ -1,3 +1,6 @@
+2010-10-25 Harri Pitkänen <hatapitk@iki.fi>
+	* Capitalized initials may appear within sentences.
+
 2010-10-24 Harri Pitkänen <hatapitk@iki.fi>
 	* Add check for incorrect infinitive form in compound verbs.
 
